Add complex divison reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1086,8 +1086,7 @@
 
 @article{chen:2016a,
 	abstract = {We propose a benchmarking strategy that is robust in the presence of timer error, OS jitter and other environmental fluctuations, and is insensitive to the highly nonideal statistics produced by timing measurements. We construct a model that explains how these strongly nonideal statistics can arise from environmental fluctuations, and also justifies our proposed strategy. We implement this strategy in the BenchmarkTools Julia package, where it is used in production continuous integration (CI) pipelines for developing the Julia language and its ecosystem.},
-	author = {Jiahao Chen and
-               Jarrett Revels},
+	author = {Jiahao Chen and Jarrett Revels},
 	doi = {},
 	journal = {CoRR},
 	keywords = {performance, perf, benchmarks, benchmark, measure, numeric computing, julia},
@@ -1112,4 +1111,18 @@
 	url = {http://eudml.org/doc/175224},
 	volume = {8},
 	year = {1964},
+}
+
+@article{baudin:2012a,
+	abstract = {The most widely used algorithm for floating point complex division, known as Smith's method, may fail more often than expected. This document presents two improved complex division algorithms. We present a proof of the robustness of the first improved algorithm. Numerical simulations show that this algorithm performs well in practice and is significantly more robust than other known implementations. By combining additional scaling methods with this first algorithm, we were able to create a second algorithm, which rarely fails.},
+	author = {Michael Baudin and Robert L. Smith},
+	doi = {},
+	journal = {CoRR},
+	keywords = {complex, mathematics, math, numeric computing, julia, python, complex numbers, arithmetic, division},
+	month = {10},
+	pages = {},
+	title = {{A Robust Complex Division in Scilab}},
+	url = {https://arxiv.org/abs/1210.4539},
+	volume = {abs/1210.4539},
+	year = {2012},
 }
