--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1126,3 +1126,11 @@
 	volume = {abs/1210.4539},
 	year = {2012},
 }
+
+@misc{ward:2002a,
+	author = {Grady Ward},
+	keywords = {names, list, english, american, british, first name, given name, female, woman, girl},
+	title = {{Moby Word II}},
+	url = {http://www.gutenberg.org/files/3201/3201.txt},
+	year = {2002}
+}
