Add FRB SF reference for Wage Rigidity data

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1130,7 +1130,17 @@
 @misc{ward:2002a,
 	author = {Grady Ward},
 	keywords = {names, list, english, american, british, first name, given name, female, woman, girl},
+	notes = {},
 	title = {{Moby Word II}},
 	url = {http://www.gutenberg.org/files/3201/3201.txt},
 	year = {2002}
+}
+
+@misc{frbsf:wagerigidity,
+	author = {Federal Reserve Bank of San Francisco},
+	keywords = {wages, wage rigidity, federal reserve, employment, data, dataset, economics, economy, workers},
+	notes = {Wage rates for U.S. workers that have not changed jobs within the year.},
+	title = {{Wage Rigidity}},
+	url = {http://www.frbsf.org/economic-research/indicators-data/nominal-wage-rigidity/},
+	year = {2017}
 }
