Fix reference author
Wrapping in {} indicates to reference generators that the name
should be treated as a complete unit. Otherwise, when generating
a reference, the author string may be parsed as a "first" and
"last" name. Here, that would be "San Francisco, Federal Reserve
of", which is not desired.

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1137,7 +1137,7 @@
 }
 
 @misc{frbsf:wagerigidity,
-	author = {Federal Reserve Bank of San Francisco},
+	author = {{Federal Reserve Bank of San Francisco}},
 	keywords = {wages, wage rigidity, federal reserve, employment, data, dataset, economics, economy, workers},
 	notes = {Wage rates for U.S. workers that have not changed jobs within the year.},
 	title = {{Wage Rigidity}},
