Add image reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1144,3 +1144,12 @@
 	url = {http://www.frbsf.org/economic-research/indicators-data/nominal-wage-rigidity/},
 	year = {2017}
 }
+
+@misc{blossfeldt:1928a,
+	author = {Karl Blossfeldt},
+	keywords = {image, img, data, dataset},
+	notes = {Sourced from Getty's Open Content Program.},
+	title = {{Acanthus mollis}},
+	url = {http://www.getty.edu/art/collection/objects/35443/karl-blossfeldt-acanthus-mollis-german-1928/},
+	year = {1928}
+}
