Add image reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -909,7 +909,7 @@
 	journal = {CoRR},
 	keywords = {bus, truck, factor, software, metrics, measure, sustainability, development, meta},
 	month = {apr},
-	notes = {For discussion, see https://news.ycombinator.com/item?id=9874503.},
+	note = {For discussion, see https://news.ycombinator.com/item?id=9874503.},
 	number = {},
 	pages = {},
 	title = {{A Novel Approach for Estimating Truck Factors}},
@@ -1034,7 +1034,7 @@
 	doi = {},
 	keywords = {datasets, data, sentiment, analysis, nlp, microblogs, twitter},
 	month = {05},
-	notes = {arXiv link: http://arxiv.org/abs/1103.2903},
+	note = {arXiv link: http://arxiv.org/abs/1103.2903},
 	pages = {93--98},
 	publisher = {CEUR Workshop Proceedings},
 	title = {{A new ANEW: Evaluation of a word list for sentiment analysis in microblogs}},
@@ -1130,7 +1130,7 @@
 @misc{ward:2002a,
 	author = {Grady Ward},
 	keywords = {names, list, english, american, british, first name, given name, female, woman, girl},
-	notes = {},
+	note = {},
 	title = {{Moby Word II}},
 	url = {http://www.gutenberg.org/files/3201/3201.txt},
 	year = {2002}
@@ -1139,16 +1139,25 @@
 @misc{frbsf:wagerigidity,
 	author = {{Federal Reserve Bank of San Francisco}},
 	keywords = {wages, wage rigidity, federal reserve, employment, data, dataset, economics, economy, workers},
-	notes = {Wage rates for U.S. workers that have not changed jobs within the year.},
+	note = {Wage rates for U.S. workers that have not changed jobs within the year.},
 	title = {{Wage Rigidity}},
 	url = {http://www.frbsf.org/economic-research/indicators-data/nominal-wage-rigidity/},
 	year = {2017}
 }
 
+@misc{azari:1929a,
+	author = {Fédèle Azari},
+	keywords = {image, img, data, dataset},
+	note = {Sourced from Getty's Open Content Program.},
+	title = {{(no title)}},
+	url = {http://www.getty.edu/art/collection/objects/134512/fedele-azari-airplane-viewed-from-above-looking-down-italian-1914-1929/},
+	year = {1929}
+}
+
 @misc{blossfeldt:1928a,
 	author = {Karl Blossfeldt},
 	keywords = {image, img, data, dataset},
-	notes = {Sourced from Getty's Open Content Program.},
+	note = {Sourced from Getty's Open Content Program.},
 	title = {{Acanthus mollis}},
 	url = {http://www.getty.edu/art/collection/objects/35443/karl-blossfeldt-acanthus-mollis-german-1928/},
 	year = {1928}
