--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1147,7 +1147,7 @@
 
 @misc{azari:1929a,
 	author = {Fédèle Azari},
-	keywords = {image, img, data, dataset},
+	keywords = {image, img, data, dataset, airplane, flight, flying, transport, transportation},
 	note = {Sourced from Getty's Open Content Program.},
 	title = {{(no title)}},
 	url = {http://www.getty.edu/art/collection/objects/134512/fedele-azari-airplane-viewed-from-above-looking-down-italian-1914-1929/},
@@ -1156,9 +1156,18 @@
 
 @misc{blossfeldt:1928a,
 	author = {Karl Blossfeldt},
-	keywords = {image, img, data, dataset},
+	keywords = {image, img, data, dataset, flower, plant},
 	note = {Sourced from Getty's Open Content Program.},
 	title = {{Acanthus mollis}},
 	url = {http://www.getty.edu/art/collection/objects/35443/karl-blossfeldt-acanthus-mollis-german-1928/},
+	year = {1928}
+}
+
+@misc{blossfeldt:1928b,
+	author = {Karl Blossfeldt},
+	keywords = {image, img, data, dataset, flower, plant},
+	note = {Sourced from Getty's Open Content Program.},
+	title = {{Allium ostrowskianum}},
+	url = {http://www.getty.edu/art/collection/objects/35448/karl-blossfeldt-allium-ostrowskianum-knoblauchpflanze-german-1928/},
 	year = {1928}
 }
