Add image reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1171,3 +1171,12 @@
 	url = {http://www.getty.edu/art/collection/objects/35448/karl-blossfeldt-allium-ostrowskianum-knoblauchpflanze-german-1928/},
 	year = {1928}
 }
+
+@misc{sullivan:1871a,
+	author = {Timothy H. O'Sullivan},
+	keywords = {image, img, data, dataset, river, us, united states, canyon},
+	note = {Sourced from Getty's Open Content Program.},
+	title = {{Black Cañon, Colorado River, From Camp 8, Looking Above}},
+	url = {http://www.getty.edu/art/collection/objects/40209/timothy-h-o'sullivan-black-canon-colorado-river-from-camp-8-looking-above-american-1871/},
+	year = {1871}
+}
