--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1172,7 +1172,7 @@
 	year = {1928}
 }
 
-@misc{sullivan:1871a,
+@misc{osullivan:1871a,
 	author = {Timothy H. O'Sullivan},
 	keywords = {image, img, data, dataset, river, us, united states, canyon},
 	note = {Sourced from Getty's Open Content Program.},
