Use LaTeX to generate accent

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1176,7 +1176,7 @@
 	author = {Timothy H. O'Sullivan},
 	keywords = {image, img, data, dataset, river, us, united states, canyon, place, nature},
 	note = {Sourced from Getty's Open Content Program.},
-	title = {{Black Cañon, Colorado River, From Camp 8, Looking Above}},
+	title = {{Black Ca{\~{n}}on, Colorado River, From Camp 8, Looking Above}},
 	url = {http://www.getty.edu/art/collection/objects/40209/timothy-h-o'sullivan-black-canon-colorado-river-from-camp-8-looking-above-american-1871/},
 	year = {1871}
 }
