Use LaTeX to generate accent

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1146,7 +1146,7 @@
 }
 
 @misc{azari:1929a,
-	author = {Fédèle Azari},
+	author = {F{\'{e}}d{\`{e}}le Azari},
 	keywords = {image, img, data, dataset, airplane, flight, flying, transport, transportation},
 	note = {Sourced from Getty's Open Content Program.},
 	title = {{(no title)}},
