--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1,5 +1,5 @@
 @techreport{beebe:2002,
-	abstract = {These notes describe an implementation of an algorithm for accurate computation of expm1(x) = exp(x) − 1, one of the new elementary functions introduced in the 1999 ISO C Standard, but already available in most UNIX C implementations. A test package modeled after the Cody and Waite Elementary Function Test Package, ELEFUNT, is developed to evaluate the accuracy of implementations of expm1(x).},
+	abstract = {These notes describe an implementation of an algorithm for accurate computation of \\( \operatname{expm1}(x) = \operatname{exp}(x) − 1 \\), one of the new elementary functions introduced in the 1999 ISO C Standard, but already available in most UNIX C implementations. A test package modeled after the Cody and Waite Elementary Function Test Package, ELEFUNT, is developed to evaluate the accuracy of implementations of \\( \operatorname{expm1}(x) \\).},
 	author = {Nelson H.F. Beebe},
 	keywords = {mathematics, math, special function, exponential, exp},
 	institution = {University of Utah},
