--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -9,7 +9,7 @@
 }
 
 @article{blair:1976,
-	abstract = {This report presents near-minimax rational approximations for the inverse of the error function inverf x, for  \\( 0 \leqslant x \leqslant 1 - {10^{ - 10000}} \\), with relative errors ranging down to  \\( {10^{ - 23}}\\). An asymptotic formula for the region \\( x \to 1\\) is also given.},
+	abstract = {This report presents near-minimax rational approximations for the inverse of the error function \\( \operatorname{inverf}(x) \\), for  \\( 0 \leqslant x \leqslant 1 - {10^{ - 10000}} \\), with relative errors ranging down to  \\( {10^{ - 23}}\\). An asymptotic formula for the region \\( x \to 1\\) is also given.},
 	author = {J.M. Blair and C.A. Edwards and J.H. Johnson},
 	doi = {10.1090/S0025-5718-1976-0421040-7},
 	journal = {Mathematics of Computation},
