--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -84,7 +84,7 @@
 
 @article{fransen:1980,
 	abstract = {In this paper we determine numerical values to 80D of the coefficients in the Taylor series expansion \\( {\Gamma ^m}(s + x) = \Sigma _0^\infty {g_k}(m,s){x^k}\\) for certain values of \\(m\\) and \\(s\\) and use these values to calculate  \\( \Gamma (p/q)\;(p,q = 1,2, \ldots ,10;\;p < q)\\) and  \\({\min _{x > 0}}\Gamma (x)\\) to 80D. Finally, we obtain a high-precision value of the integral  \\(\smallint _0^\infty {(\Gamma (x))^{ - 1}}\;dx\\).},
-	author = {Arne Frans\'{e}n and Staffan Wrigge},
+	author = {Arne Frans{\'{e}}n and Staffan Wrigge},
 	doi = {10.1090/S0025-5718-1980-0559204-5},
 	journal = {Mathematics of Computation},
 	keywords = {Special functions, Gamma function, Riemann Zeta function, gamma, mathematics, math, special function},
