--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -156,7 +156,7 @@
 }
 
 @phdthesis{pugh:2004,
-	abstract = {This thesis is an analysis of C. Lanczos’ approximation of the classical gamma function Γ(z+1) as given in his 1964 paper \textit{A Precision Approximation of the Gamma Function}. The purposes of this study are: (i) to explain the details of Lanczos’ paper, including proofs of all claims made by the author; (ii) to address the question of how best to implement the approximation method in practice; and (iii) to generalize the methods used in the derivation of the approximation.},
+	abstract = {This thesis is an analysis of C. Lanczos’ approximation of the classical gamma function \\( \Gamma(z+1) \\) as given in his 1964 paper \textit{A Precision Approximation of the Gamma Function}. The purposes of this study are: (i) to explain the details of Lanczos’ paper, including proofs of all claims made by the author; (ii) to address the question of how best to implement the approximation method in practice; and (iii) to generalize the methods used in the derivation of the approximation.},
 	author = {Glendon Ralph Pugh},
 	keywords = {gamma, lanczos, math, mathematics, special function},
 	school = {The University of British Columbia},
