--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -167,7 +167,7 @@
 
 @article{meurer:2016,
 	abstract = {SymPy is an open source computer algebra system written in pure Python. It is built with a focus on extensibility and ease of use, through both interactive and programmatic applications. These characteristics have led SymPy to become the standard symbolic library for the scientific Python ecosystem. This paper presents the architecture of SymPy, a description of its features, and a discussion of select domain specific submodules. The supplementary materials provide additional examples and further outline details of the architecture and features of SymPy.},
-	author = {A. Meurer and C.P. Smith and M. Paprocki and O. \u{C}ert\'{i}k and S.B. Kirpichev and M. Rocklin and A. Kumar and S. Ivanov and J.K. Moore and S. Singh and T. Rathnayake and S. Vig and B.E. Granger and R.P. Muller and F. Bonazzi and H. Gupta and S. Vats and F. Johansson and F. Pedregosa and M.J. Curry and A.R. Terrel and \u{S}. Rou\u{c}ka and A. Saboo and I. Fernando and S. Kulal and R. Cimrman and A. Scopatz},
+	author = {A. Meurer and C.P. Smith and M. Paprocki and O. {\u{C}}ert{\'{i}}k and S.B. Kirpichev and M. Rocklin and A. Kumar and S. Ivanov and J.K. Moore and S. Singh and T. Rathnayake and S. Vig and B.E. Granger and R.P. Muller and F. Bonazzi and H. Gupta and S. Vats and F. Johansson and F. Pedregosa and M.J. Curry and A.R. Terrel and {\u{S}}. Rou{\u{c}}ka and A. Saboo and I. Fernando and S. Kulal and R. Cimrman and A. Scopatz},
 	doi = {10.7287/peerj.preprints.2083v3},
 	journal = {PeerJ Preprints},
 	keywords = {symbolic, python, computer algebra system},
