--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -258,7 +258,7 @@
 	abstract = {G. Marsaglia recently introduced a class of very fast xorshift random number generators, whose implementation uses three “xorshift” operations. They belong to a large family of generators based on linear recurrences modulo 2, which also includes shift-register generators, the Mersenne twister, and several others. In this article, we analyze the theoretical properties of xorshift generators, search for the best ones with respect to the equidistribution criterion, and test them empirically. We find that the vast majority of xorshift generators with only three xorshift operations, including those having good equidistribution, fail several simple statistical tests. We also discuss generators with more than three xorshifts.},
 	acmid = {1113319},
 	address = {New York, NY, USA},
-	author = {Fran\c{c}ois Panneton and Pierre L'Ecuyer},
+	author = {Fran{\c{c}}ois Panneton and Pierre L'Ecuyer},
 	doi = {10.1145/1113316.1113319},
 	issn = {1049-3301},
 	journal = {ACM Transactions on Modeling and Computer Simulation},
