--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -441,7 +441,7 @@
 
 @article{kachitvichyanukul:1985,
     abstract = {The paper presents an exact, uniformly fast algorithm for generating random variates from the hypergeometric distribution. The overall algorithm framework is acceptance/ rejection and is implemented via composition. Three subdensities are used, one is uniform and the other two are exponential. The algorithm is compared with algorithms based on sampling without replacement, inversion, and aliasing. A comprehensive survey of existing algorithms is also given.},
-	author = {Voratas. Kachitvichyanukul and Burce Schmeiser},
+	author = {Voratas Kachitvichyanukul and Burce Schmeiser},
 	doi = {10.1080/00949658508810839},
 	journal = {Journal of Statistical Computation and Simulation},
 	keywords = {random, rand, prng, rng, pseudorandom, number, generator, hypergeometric},
