--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -595,7 +595,7 @@
 
 @article{hormann:1993b,
 	abstract = {The transformed rejection method, a combination of the inversion and the rejection method, which is used to generate non-uniform random numbers from a variety of continuous distributions can be applied to discrete distributions as well. For the Poisson distribution a short and simple algorithm is obtained which is well suited for large values of the Poisson parameter \\(\mu\\), even when \\(\mu\\) may vary from call to call. The average number of uniform deviates required is lower than for any of the known uniformly fast algorithms. Timings for a C implementation show that the algorithm needs only half of the code but is - for \\(\mu\\) not too small - at least as fast as the current state-of-the-art algorithms.},
-	author = {W. H\"{o}rmann},
+	author = {W. H{\"{o}}rmann},
 	doi = {10.1016/0167-6687(93)90997-4},
 	issn = {0167-6687},
 	journal = {Insurance: Mathematics and Economics},
