Use LaTeX encoding

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1101,7 +1101,7 @@
 
 @article{joehnk:1964,
 	abstract= {},
-	author = {M.D. Jöhnk},
+	author = {M.D. J{\u{o}}hnk},
 	doi = {},
 	journal = {Metrika},
 	keywords = {probability theory, sampling, random numbers},
