Add image reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1180,3 +1180,12 @@
 	url = {http://www.getty.edu/art/collection/objects/40209/timothy-h-o'sullivan-black-canon-colorado-river-from-camp-8-looking-above-american-1871/},
 	year = {1871}
 }
+
+@misc{lange:1940a,
+	author = {Dorothea Lange},
+	keywords = {image, img, data, dataset, home, house, dust bowl, west},
+	note = {Sourced from Getty's Open Content Program.},
+	title = {{(no title)}},
+	url = {http://www.getty.edu/art/collection/objects/128362/dorothea-lange-abandoned-dust-bowl-home-american-about-1935-1940/},
+	year = {1940}
+}
