Add image reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1189,3 +1189,12 @@
 	url = {http://www.getty.edu/art/collection/objects/128362/dorothea-lange-abandoned-dust-bowl-home-american-about-1935-1940/},
 	year = {1940}
 }
+
+@misc{braun:1870a,
+	author = {Adolphe Braun},
+	keywords = {image, img, data, dataset, alpine, landscape, french, france, nature, place},
+	note = {Sourced from Getty's Open Content Program.},
+	title = {{(no title)}},
+	url = {http://www.getty.edu/art/collection/objects/54324/adolphe-braun-alpine-landscape-french-1865-1870/},
+	year = {1870}
+}
