Add image reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1148,7 +1148,7 @@
 @misc{azari:1929a,
 	author = {F{\'{e}}d{\`{e}}le Azari},
 	keywords = {image, img, data, dataset, airplane, flight, flying, transport, transportation},
-	note = {Sourced from Getty's Open Content Program.},
+	note = {F{\'{e}}d{\`{e}}le Azari's gelatin silver print of an airplane, viewed from above looking down. Sourced from Getty's Open Content Program.},
 	title = {{(no title)}},
 	url = {http://www.getty.edu/art/collection/objects/134512/fedele-azari-airplane-viewed-from-above-looking-down-italian-1914-1929/},
 	year = {1929}
@@ -1157,7 +1157,7 @@
 @misc{blossfeldt:1928a,
 	author = {Karl Blossfeldt},
 	keywords = {image, img, data, dataset, flower, plant},
-	note = {Sourced from Getty's Open Content Program.},
+	note = {Karl Blossfeldt's gelatin silver print Acanthus mollis. Sourced from Getty's Open Content Program.},
 	title = {{Acanthus mollis}},
 	url = {http://www.getty.edu/art/collection/objects/35443/karl-blossfeldt-acanthus-mollis-german-1928/},
 	year = {1928}
@@ -1166,7 +1166,7 @@
 @misc{blossfeldt:1928b,
 	author = {Karl Blossfeldt},
 	keywords = {image, img, data, dataset, flower, plant},
-	note = {Sourced from Getty's Open Content Program.},
+	note = {Karl Blossfeldt's gelatin silver print Allium ostrowskianum. Sourced from Getty's Open Content Program.},
 	title = {{Allium ostrowskianum}},
 	url = {http://www.getty.edu/art/collection/objects/35448/karl-blossfeldt-allium-ostrowskianum-knoblauchpflanze-german-1928/},
 	year = {1928}
@@ -1175,7 +1175,7 @@
 @misc{osullivan:1871a,
 	author = {Timothy H. O'Sullivan},
 	keywords = {image, img, data, dataset, river, us, united states, canyon, place, nature},
-	note = {Sourced from Getty's Open Content Program.},
+	note = {Timothy H. O'Sullivan's albumen silver print Black Ca{\~{n}}on, Colorado River, From Camp 8, Looking Above. Sourced from Getty's Open Content Program.},
 	title = {{Black Ca{\~{n}}on, Colorado River, From Camp 8, Looking Above}},
 	url = {http://www.getty.edu/art/collection/objects/40209/timothy-h-o'sullivan-black-canon-colorado-river-from-camp-8-looking-above-american-1871/},
 	year = {1871}
@@ -1184,7 +1184,7 @@
 @misc{lange:1940a,
 	author = {Dorothea Lange},
 	keywords = {image, img, data, dataset, home, house, dust bowl, west},
-	note = {Sourced from Getty's Open Content Program.},
+	note = {Dorothea Lange's gelatin silver print of an abandoned Dust Bowl home. Sourced from Getty's Open Content Program.},
 	title = {{(no title)}},
 	url = {http://www.getty.edu/art/collection/objects/128362/dorothea-lange-abandoned-dust-bowl-home-american-about-1935-1940/},
 	year = {1940}
@@ -1193,8 +1193,17 @@
 @misc{braun:1870a,
 	author = {Adolphe Braun},
 	keywords = {image, img, data, dataset, alpine, landscape, french, france, nature, place},
-	note = {Sourced from Getty's Open Content Program.},
+	note = {Adolphe Braun's carbon print of a French alpine landscape. Sourced from Getty's Open Content Program.},
 	title = {{(no title)}},
 	url = {http://www.getty.edu/art/collection/objects/54324/adolphe-braun-alpine-landscape-french-1865-1870/},
 	year = {1870}
+}
+
+@misc{muybridge:1887a,
+	author = {Eadweard J. Muybridge},
+	keywords = {image, img, data, dataset, cat, animal, moving},
+	note = {Eadweard J. Muybridge's collotype of a house cat (in twenty-four views). Sourced from Getty's Open Content Program.},
+	title = {{(no title)}},
+	url = {http://www.getty.edu/art/collection/objects/40918/eadweard-j-muybridge-animal-locomotion-american-1887/},
+	year = {1887}
 }
