Add image reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1203,7 +1203,16 @@
 	author = {Eadweard J. Muybridge},
 	keywords = {image, img, data, dataset, cat, animal, moving},
 	note = {Eadweard J. Muybridge's collotype of a house cat (in twenty-four views). Sourced from Getty's Open Content Program.},
-	title = {{(no title)}},
+	title = {{Animal Locomotion}},
 	url = {http://www.getty.edu/art/collection/objects/40918/eadweard-j-muybridge-animal-locomotion-american-1887/},
+	year = {1887}
+}
+
+@misc{muybridge:1887b,
+	author = {Eadweard J. Muybridge},
+	keywords = {image, img, data, dataset, male, nude, human, man, moving},
+	note = {Eadweard J. Muybridge's collotype of a nude male moving in place (in forty-eight views). Sourced from Getty's Open Content Program.},
+	title = {{Animal Locomotion}},
+	url = {http://www.getty.edu/art/collection/objects/40907/eadweard-j-muybridge-animal-locomotion-american-1887/},
 	year = {1887}
 }
