--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1185,7 +1185,7 @@
 	author = {Dorothea Lange},
 	keywords = {image, img, data, dataset, home, house, dust bowl, west},
 	note = {Dorothea Lange's gelatin silver print of an abandoned Dust Bowl home. Sourced from Getty's Open Content Program.},
-	title = {{(no title)}},
+	title = {{Abandoned Dust Bowl Home}},
 	url = {http://www.getty.edu/art/collection/objects/128362/dorothea-lange-abandoned-dust-bowl-home-american-about-1935-1940/},
 	year = {1940}
 }
