--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1216,3 +1216,12 @@
 	url = {http://www.getty.edu/art/collection/objects/40907/eadweard-j-muybridge-animal-locomotion-american-1887/},
 	year = {1887}
 }
+
+@misc{emerson:1888a,
+	author = {Peter Henry Emerson},
+	keywords = {image, img, data, dataset, animals, sheep, pastoral, countryside},
+	note = {Peter Henry Emerson's photogravure of sheep in a pastoral setting. Sourced from Getty's Open Content Program.},
+	title = {{A March Pastoral}},
+	url = {http://www.getty.edu/art/collection/objects/141994/peter-henry-emerson-a-march-pastoral-suffolk-british-1888/},
+	year = {1888}
+}
