--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1219,7 +1219,7 @@
 
 @misc{emerson:1888a,
 	author = {Peter Henry Emerson},
-	keywords = {image, img, data, dataset, animals, sheep, pastoral, countryside},
+	keywords = {image, img, data, dataset, animals, sheep, pastoral, countryside, england, uk, united kingdom, britain, english, british},
 	note = {Peter Henry Emerson's photogravure of sheep in a pastoral setting. Sourced from Getty's Open Content Program.},
 	title = {{A March Pastoral}},
 	url = {http://www.getty.edu/art/collection/objects/141994/peter-henry-emerson-a-march-pastoral-suffolk-british-1888/},
