Add image reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1225,3 +1225,12 @@
 	url = {http://www.getty.edu/art/collection/objects/141994/peter-henry-emerson-a-march-pastoral-suffolk-british-1888/},
 	year = {1888}
 }
+
+@misc{beato:1865a,
+	author = {Felice Beato},
+	keywords = {image, img, data, dataset, boats, boat, river, japan, nagasaki},
+	note = {Felice Beato's albumen silver print of boats in a river in Nagasaki. Sourced from Getty's Open Content Program.},
+	title = {{(no title)}},
+	url = {http://www.getty.edu/art/collection/objects/241797/felice-beato-boats-in-river-nagasaki-british-about-1865/},
+	year = {1865}
+}
