Add text mining reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1234,3 +1234,22 @@
 	url = {http://www.getty.edu/art/collection/objects/241797/felice-beato-boats-in-river-nagasaki-british-about-1865/},
 	year = {1865}
 }
+
+@inproceedings{hu:2004a,
+	abstract = {Merchants selling products on the Web often ask their customers to review the products that they have purchased and the associated services. As e-commerce is becoming more and more popular, the number of customer reviews that a product receives grows rapidly. For a popular product, the number of reviews can be in hundreds or even thousands. This makes it difficult for a potential customer to read them to make an informed decision on whether to purchase the product. It also makes it difficult for the manufacturer of the product to keep track and to manage customer opinions. For the manufacturer, there are additional difficulties because many merchant sites may sell the same product and the manufacturer normally produces many kinds of products. In this research, we aim to mine and to summarize all the customer reviews of a product. This summarization task is different from traditional text summarization because we only mine the features of the product on which the customers have expressed their opinions and whether the opinions are positive or negative. We do not summarize the reviews by selecting a subset or rewrite some of the original sentences from the reviews to capture the main points as in the classic text summarization. Our task is performed in three steps: (1) mining product features that have been commented on by customers; (2) identifying opinion sentences in each review and deciding whether each opinion sentence is positive or negative; (3) summarizing the results. This paper proposes several novel techniques to perform these tasks. Our experimental results using reviews of a number of products sold online demonstrate the effectiveness of the techniques.},
+	acmid = {1014073},
+	address = {New York, NY, USA},
+	author = {Minqing Hu and Bing Liu},
+	booktitle = {Proceedings of the Tenth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+	doi = {10.1145/1014052.1014073},
+	isbn = {1-58113-888-1},
+	keywords = {reviews, sentiment classification, summarization, text mining},
+	location = {Seattle, WA, USA},
+	numpages = {10},
+ 	pages = {168--177},
+	publisher = {ACM},
+	series = {KDD '04},
+	title = {{Mining and Summarizing Customer Reviews}},
+	url = {http://doi.acm.org/10.1145/1014052.1014073},
+	year = {2004},
+}
