Add text analysis reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1253,3 +1253,22 @@
 	url = {http://doi.acm.org/10.1145/1014052.1014073},
 	year = {2004},
 }
+
+@inproceedings{liu:2005a,
+	abstract = {The Web has become an excellent source for gathering consumer opinions. There are now numerous Web sites containing such opinions, e.g., customer reviews of products, forums, discussion groups, and blogs. This paper focuses on online customer reviews of products. It makes two contributions. First, it proposes a novel framework for analyzing and comparing consumer opinions of competing products. A prototype system called Opinion Observer is also implemented. The system is such that with a single glance of its visualization, the user is able to clearly see the strengths and weaknesses of each product in the minds of consumers in terms of various product features. This comparison is useful to both potential customers and product manufacturers. For a potential customer, he/she can see a visual side-by-side and feature-by-feature comparison of consumer opinions on these products, which helps him/her to decide which product to buy. For a product manufacturer, the comparison enables it to easily gather marketing intelligence and product benchmarking information. Second, a new technique based on language pattern mining is proposed to extract product features from Pros and Cons in a particular type of reviews. Such features form the basis for the above comparison. Experimental results show that the technique is highly effective and outperform existing methods significantly.},
+	acmid = {1060797},
+	address = {New York, NY, USA},
+	author = {Bing Liu and Minqing Hu and Junsheng Cheng},
+	booktitle = {Proceedings of the 14th International Conference on World Wide Web},
+	doi = {10.1145/1060745.1060797},
+	isbn = {1-59593-046-9},
+	keywords = {information extraction, opinion analysis, sentiment analysis, visualization},
+	location = {Chiba, Japan},
+	numpages = {10},
+ 	pages = {342--351},
+	publisher = {ACM},
+	series = {WWW '05},
+	title = {{Opinion Observer: Analyzing and Comparing Opinions on the Web}},
+	url = {http://doi.acm.org/10.1145/1060745.1060797},
+	year = {2005},
+}
