Add text analysis reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1272,3 +1272,17 @@
 	url = {http://doi.acm.org/10.1145/1060745.1060797},
 	year = {2005},
 }
+
+@inbook{liu:2010a,
+	author = {Bing Liu},
+	booktitle = {Handbook of Natural Language Processing},
+	edition = {2nd},
+	editor = {Nitin Indurkhya and Fred J. Damerau},
+	isbn = {9781420085921},
+	keywords = {natural language processing, nlp, sentiment, subjectivity, text mining, opinion analysis, information extraction},
+	pages = {627--66},
+	publisher = {Chapman \& Hall/CRC},
+	title = {{Sentiment Analysis and Subjectivity}},
+	url = {https://www.crcpress.com/Handbook-of-Natural-Language-Processing-Second-Edition/Indurkhya-Damerau/p/book/9781420085921},
+	year = {2010},
+}
