Add Minard reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1286,3 +1286,12 @@
 	url = {https://www.crcpress.com/Handbook-of-Natural-Language-Processing-Second-Edition/Indurkhya-Damerau/p/book/9781420085921},
 	year = {2010},
 }
+
+@book{minard:1869a,
+	author = {Charles Joseph Minard},
+	keywords = {cartography, napoleon, visualization, dataviz, graphics, charts, maps},
+	publisher = {Ecole nationale des ponts et chauss{\'{e}}es},
+	title = {{Tableaux graphiques et cartes figuratives}},
+	url = {http://patrimoine.enpc.fr/document/ENPC01_Fol_10975?image=54#bibnum},
+	year = {1869},
+}
