Add Grammar of Graphics

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1295,3 +1295,14 @@
 	url = {http://patrimoine.enpc.fr/document/ENPC01_Fol_10975?image=54#bibnum},
 	year = {1869},
 }
+
+@book{wilkinson:2005a,
+	author = {Leland Wilkinson},
+	doi = {10.1007/0-387-28695-0},
+	isbn = {978-0-387-24544-7},
+	keywords = {visualization, dataviz, graphics, charts, information},
+	publisher = {Springer-Verlag New York},
+	title = {{The Grammar of Graphics}},
+	url = {http://www.springer.com/gp/book/9780387245447},
+	year = {2005},
+}
