Add Nightingale reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1306,3 +1306,13 @@
 	url = {http://www.springer.com/gp/book/9780387245447},
 	year = {2005},
 }
+
+@book{nightingale:1859a,
+	address = {London, United Kingdom},
+	author = {Florence Nightingale},
+	keywords = {visualization, dataviz, graphics, charts, war, infographics},
+	publisher = {John W. Parker and Son},
+	title = {{A contribution to the sanitary history of the British army during the late war with Russia}},
+	url = {http://ocp.hul.harvard.edu/dl/contagion/010164675},
+	year = {1859},
+}
