Add braces to ensure treated exactly

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1311,7 +1311,7 @@
 	address = {London, United Kingdom},
 	author = {Florence Nightingale},
 	keywords = {visualization, dataviz, graphics, charts, war, infographics},
-	publisher = {John W. Parker and Son},
+	publisher = {{John W. Parker and Son}},
 	title = {{A contribution to the sanitary history of the British army during the late war with Russia}},
 	url = {http://ocp.hul.harvard.edu/dl/contagion/010164675},
 	year = {1859},
