Add Savoy reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1316,3 +1316,11 @@
 	url = {http://ocp.hul.harvard.edu/dl/contagion/010164675},
 	year = {1859},
 }
+
+@misc{savoy:2005a,
+	author = {Jacques Savoy},
+	keywords = {text mining, nlp, natural language processing, language, lang, stop words},
+	title = {{IR Multilingual Resources at UniNE}},
+	url = {http://members.unine.ch/jacques.savoy/clef/},
+	year = {2005}
+}
