Add Spam Assassin reference

--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1324,3 +1324,11 @@
 	url = {http://members.unine.ch/jacques.savoy/clef/},
 	year = {2005}
 }
+
+@misc{mason:spamassassin,
+	author = {Justin Mason},
+	keywords = {text mining, nlp, natural language processing, language, lang, email, e-mail, mail, corpus, spam, ham, classification},
+	title = {{Spam Assassin Public Mail Corpus}},
+	url = {http://spamassassin.apache.org/old/publiccorpus/readme.html},
+	year = {2006}
+}
