--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -2678,3 +2678,18 @@
 	volume = {7},
 	year = {1964},
 }
+
+@inproceedings{tong:2004a,
+	abstract = {Linear prediction methods, such as least squares for regression, logistic regression and support vector machines for classification, have been extensively used in statistics and machine learning. In this paper, we study stochastic gradient descent (SGD) algorithms on regularized forms of linear prediction methods. This class of methods, related to online algorithms such as perceptron, are both efficient and very simple to implement. We obtain numerical rate of convergence for such algorithms, and discuss its implications. Experiments on text data will be provided to demonstrate numerical and statistical consequences of our theoretical findings.},
+	address = {New York, NY, USA},
+	author = {Tong Zhang},
+	booktitle = {Proceedings of the Twenty-First International Conference on Machine Learning},
+	doi = {10.1145/1015330.1015332},
+	keywords = {machine learning, ml, classification, stochastic gradient descent, sgd, regression, linear regression},
+	location = {Banff, Alberta, Canada},
+	pages = {116},
+	publisher = {Association for Computing Machinery},
+	title = {{Solving Large Scale Linear Prediction Problems Using Stochastic Gradient Descent Algorithms}},
+	url = {https://doi.org/10.1145/1015330.1015332},
+	year = {2004},
+}
