--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -2693,3 +2693,15 @@
 	url = {https://doi.org/10.1145/1015330.1015332},
 	year = {2004},
 }
+
+@techreport{rosenblatt:1957a,
+	abstract = {},
+	address = {Buffalo, NY, USA},
+	author = {Frank Rosenblatt},
+	institution = {Cornell Aeronautical Laboratory},
+	keywords = {neural networks, machine learning, ml, loss functions},
+	number = {85-460-1},
+	title = {{The Perceptron--a perceiving and recognizing automaton}},
+	url = {},
+	year = {1957},
+}
