--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -1419,7 +1419,7 @@
 	keywords = {visualization, dataviz, graphics, charts, war, infographics},
 	publisher = {{John W. Parker and Son}},
 	title = {{A contribution to the sanitary history of the British army during the late war with Russia}},
-	url = {http://ocp.hul.harvard.edu/dl/contagion/010164675},
+	url = {https://curiosity.lib.harvard.edu/contagion/catalog/36-990101646750203941},
 	year = {1859},
 }
 
