--- a/docs/references/bib.bib
+++ b/docs/references/bib.bib
@@ -548,7 +548,7 @@
 	number = {1},
 	pages = {101-102},
 	title = {{Generating a Variable from the Tail of the Normal Distribution}},
-	url = {http://dx.doi.org/10.1080/00401706.1964.10490150},
+	url = {https://doi.org/10.1080/00401706.1964.10490150},
 	volume = {6},
 	year = {1964},
 }
